WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46232
Extending the selection to sentence boundary after a line break may select extra character
https://bugs.webkit.org/show_bug.cgi?id=46232
Summary
Extending the selection to sentence boundary after a line break may select ex...
mitz
Reported
2010-09-21 16:50:18 PDT
<
rdar://problem/7729077
> Patch forthcoming.
Attachments
Advance the text iterator instead of advancing a position
(4.50 KB, patch)
2010-09-21 16:59 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-09-21 16:59:54 PDT
Created
attachment 68309
[details]
Advance the text iterator instead of advancing a position
Darin Adler
Comment 2
2010-09-21 17:04:34 PDT
Comment on
attachment 68309
[details]
Advance the text iterator instead of advancing a position View in context:
https://bugs.webkit.org/attachment.cgi?id=68309&action=review
> WebCore/editing/visible_units.cpp:234 > + characterRange = charIt.range(); > + pos = characterRange->startPosition();
Why not just write charIt.range()->startPosition()?
mitz
Comment 3
2010-09-21 17:14:09 PDT
Fixed in <
https://bugs.webkit.org/show_bug.cgi?id=46232
>.
Adele Peterson
Comment 4
2010-09-21 17:18:03 PDT
I think Dan meant:
http://trac.webkit.org/changeset/67994
WebKit Review Bot
Comment 5
2010-09-21 17:51:50 PDT
http://trac.webkit.org/changeset/67994
might have broken GTK Linux 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/67994
http://trac.webkit.org/changeset/67995
http://trac.webkit.org/changeset/67996
mitz
Comment 6
2010-09-21 18:41:31 PDT
Test updated in <
http://trac.webkit.org/changeset/68003
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug